# dask-nanocourse

./: .gitignore  README.md  pyproject.toml
exercises/: Exercise_1.ipynb  Untitled1.ipynb  example_3.py  example_3.sh  exercise_0.ipynb  exercise_1.ipynb  exercise_2.ipynb  exercise_3.py  exercise_3.sh  exercise_4.ipynb
exercises/session_1/: exercise_0.ipynb  exercise_1.ipynb
exercises/session_2/: exercise_2.ipynb  lab1_solution.ipynb
exercises/session_3/: exercise_2b.ipynb
exercises/session_4/: exercise_3.py  exercise_4.ipynb
slidev/: pnpm-lock.yaml  slides.md
slidev/pages/: 0.md  1.md  2.md  3.md  _2.md  _3.md  lab_1.md  lab_2.md  session_1.md  session_2.md  session_3.md  session_4.md
