[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dask-nanocourse"
version = "0.1.0"
description = "Environment for Dask distributed/HPC demos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "dask[distributed]",
  "jupyter",
  "scikit-image",
  "zarr",
  "dask-labextension",
  "dask-jobqueue",
]